2012-03-30  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: Added an option in the preferences dialog
	called "clear jobs from the job queue after they've been run". Can
	be set to "only if run was successfull", "even if there were
	warnings" and "even if there were errors". Defaults to off.

2012-03-29  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mkvextract, mmg: Re-write of the whole XML handling
	code. It now uses the "pugixml" C++ library instead of the "expat"
	library. Therefore "expat" is not required for building MKVToolNix
	anymore. And neither is Boost's "property tree" library. "pugixml"
	itself is included and not an external requirement either.

	* Build system: removed all files and documentation related to
	building MKVToolNix with Microsoft's Visual Studio because even
	the most recent version of Visual C++ does not support the C++11
	features required for MKVToolNix.

	* mkvmerge, mkvextract: removal: Removed support for the
	CorePicture file format. It was mostly unused and relied on old
	code that will be removed soon.

	* documentation: enhancement: mkvmerge's man page has been updated
	with a list of valid XML tags for the chapters, tags and segment
	info XML file formats.

	* all: Updated the DTD files with the newly supported elements.

	* mkvmerge: enhancement: Chapter XML files: mkvmerge can handle
	the "ChapterSegmentEditionUID" element.

	* mkvmerge: enhancement: Segment info XML files: mkvmerge can
	handle the "SegmentFilename", "PreviousSegmentFilename" and
	"NextSegmentFilename" elements.

2012-03-19  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: enhancement: Added "mts" as yet another file extension for
	MPEG transport streams.

2012-03-18  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed a crash due to a missing argument for a
	format string when clicking on the "Browse" button for the
	track-specific tags.

2012-03-15  Moritz Bunkus  <moritz@bunkus.org>
